app/src/main/java/com/example/truckercore/core/error/default_errors/CacheException.kt
package com.example.truckercore.core.error.default_errors

class CacheException(message: String? = null) :
    Exception(message)